[fix] 修改站点配置

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ title: ink0101's Notes
 subtitle: 
 description: 前端学习，包括JavaScript，Html, Css, React, Webpack, 思维导图等。
 keywords:
-author: fang.chen
-language:
+author: ink0101
+language: zh-CN
 timezone:
 
 # URL
